<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_tab_banner4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_tab_frame_tabwidget_background_img2"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_name_title" >
            </TextView>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_name_hint"
                android:inputType="textCapWords"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_age_title" >
            </TextView>

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_age_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_weight_title" >
            </TextView>

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_weight_hint"
                android:inputType="phone"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_height_title" >
            </TextView>

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_height_hint"
                android:inputType="phone"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_gender_title" >
            </TextView>

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioGenderF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ui_profile_gender_female" />

                <RadioButton
                    android:id="@+id/radioGenderM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ui_profile_gender_male" >
                </RadioButton>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:onClick="onSaveClicked"
                    android:text="@string/ui_button_save_title" >
                </Button>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:onClick="onCancelClicked"
                    android:text="@string/ui_button_cancel_title" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>