<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_tab_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_tab_frame_tabwidget_background_img2"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_tab"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:onClick="onStartClicked"
            android:text="@string/button_start" >
        </Button>

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:onClick="onEndClicked"
            android:text="@string/button_end" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_tab_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/main_tab"
        android:layout_below="@id/main_tab_banner"
        android:background="@drawable/main_tab_frame_tabspec_background_current"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:focusable="true" />

        <TextView
            android:id="@+id/s_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="#FF0066"
            android:shadowDx="4"
            android:shadowDy="2"
            android:shadowRadius="3.0"
            android:text="Activity1,will display step" />

        <TextView
            android:id="@+id/s_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dip"
            android:shadowColor="#FF0066"
            android:shadowDx="4"
            android:shadowDy="2"
            android:shadowRadius="3.0"
            />

        <TextView
            android:id="@+id/s_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dip"
            android:shadowColor="#FF0066"
            android:shadowDx="4"
            android:shadowDy="2"
            android:shadowRadius="3.0"
            android:text="Not start yet" />

        <com.caloriecounter.utils.ScrollForeverTextView
            android:id="@+id/channel"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="Thanks for using our 30 days trial, please see our website for more information"
            android:textColor="#33CCFF"
            android:textSize="20dip" >
        </com.caloriecounter.utils.ScrollForeverTextView>
    </LinearLayout>

</RelativeLayout>